--- a/_posts/2019-10-01-job-dev-2.markdown
+++ b/_posts/2019-10-01-job-dev-2.markdown
@@ -7,12 +7,11 @@ date: 2010-10-01
 img: programmer.jpg
 thumbnail: programmer_thumbnail.jpg
 alt: image-alt
+category: full-stack
 project-date: Now
-
 general-reqs: "An effective and motivated team player – We work as a team and grow as a team.  
 <br/>Self-driven, independent, and critical thinkers – There will be no daily todo list in this job. 
 <br/>Strong communication skills.  Leadership and project management experience is a strong plus."
-
 experience: "• Demonstrated hands-on 4+ years of experience in similar roles, developing production-level backend infrastructure Familiar with all layers of computer software development, and ability to turn a concept into a finished scalable product.
 <br/>• Must have experience with deploying, monitoring, and building robust fault tolerant microservice architectures in AWS (familiarity with other cloud offerings is a plus).
 <br/>• Demonstrated ability to design and develop high quality, highly scalable code with a focus on backend development, involving high data volumes and transaction rates with asynchronous workloads.
@@ -27,9 +26,6 @@ experience: "• Demonstrated hands-on 4+ years of experience in similar roles, 
 <br/>• Systems Software experience, including file systems, backend services, workflow engines, security, etc.
 <br/>• Deep understanding of object-oriented design, programming concepts, data structures and common algorithms.
 <br/>• Experience in Unix environments."
-
-category: full-stack
-
-description: "This role will be heavily involved with expanding and enhancing our existing software infrastructure, as well as a lot of greenfield development building robust features for our core software platform.<br/>You will be part of a technical team that will design and develop backend infrastructure software to communicate across all layers, database stack, cloud and log analytics of the server and network communication, and security provisions necessary to scale the company’s AI platform.<br/>Your work will be highly visible throughout the company and will build the foundation for our go-to-market product. As one of the core members of the team, you will have direct input in building a roadmap to meet company milestones.<br/>You will be reporting directly to the CTO."
+description: "This role will be heavily involved with expanding and enhancing our existing software infrastructure, as well as a lot of greenfield development building robust features for our core software platform.<br/>You will be part of a technical team that will design and develop backend infrastructure software to communicate across all layers, database stack, cloud and log analytics of the server and network communication, and security provisions necessary to scale the company’s AI platform.<br/><br/>Your work will be highly visible throughout the company and will build the foundation for our go-to-market product. As one of the core members of the team, you will have direct input in building a roadmap to meet company milestones.<br/>You will be reporting directly to the CTO."
 
 ---
